--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -8,6 +8,7 @@
 
 p{
   font-size: $fs-normal;
+  margin-block-start: 0;
 }
 .agm-map {
   height: 250px;
@@ -87,44 +88,6 @@ p{
     }
   }
 
-  // padding: 12px 16px;
-  // position: sticky;
-  // top: 0;
-  // z-index: 11;
-  // border-radius: 0;
-
-  // .mat-card-header{
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: space-around;
-  //   width: 100%;
-  //   .lt{
-  //     flex-basis: 90%;
-  //     width: 270px;
-  //     overflow: hidden;
-  //     text-overflow: ellipsis;
-  //     .spotName{
-  //       color: #333;
-  //       font-weight: bold;
-  //       font-size: 14px;
-  //       line-height: 1.2;
-  //       // flex-basis: 90%;
-  //       white-space: nowrap;
-  //     }
-  //   }
-    
-  //   .rt{
-  //     flex-basis: 10%;
-
-  //     display: flex;
-  //     .plan_fav{
-  //       img{
-  //         height: 16px;
-  //       }
-  //     }
-  //   }
-  // }
-
   &.onplan{
     &::after{
       content: "";
@@ -176,15 +139,6 @@ p{
     background-color: rgba(255, 255, 255, 0.6);
   }
 
-  ::ng-deep .owl-stage-outer {
-    // border-left: 2px solid silver;
-    height: 208px;
-  }
-
-  ::ng-deep .owl-carousel {
-    height: 174px;
-  }
-
   ::ng-deep .owl-carousel .owl-stage {
     padding-left: 0 !important;
   }
@@ -222,10 +176,26 @@ p{
 
     p {
       margin: 5px;
-      height: 66px;
+      height: 40px;
       overflow: hidden;
     }
   }
+
+  .mat-card-header{
+    position: relative;
+    h4.header{
+      margin-block-start: 1em;
+      margin-block-end: 0.4em;
+    }
+    img.mark{
+      width: 41px;
+      position: absolute;
+      right: 0;
+      bottom: 10px;
+    }
+  }
+
+  
 }
 
 .spotInfo {
@@ -300,7 +270,7 @@ p{
   }
 
   ::ng-deep .owl-dots {
-    margin-top: -5px;
+    // margin-top: -5px;
 
     .owl-dot.active span{
       background-color: #bfa060;
@@ -309,7 +279,7 @@ p{
     .owl-dot span {
       width: 6.2px;
       height: 6.2px;
-      margin: 3px 3px;
+      margin: 5px 3px;
       background-color: #efefef;
     }
   }
@@ -333,14 +303,82 @@ p{
       text-shadow: 1px 1px 1px #888;
     }
   }
+
+  .thumb {
+    display: inline-flex !important;
+    width: 100%;
+    > img {
+      width: 100%;
+      height: 66.6vw;
+      object-fit: cover;
+      @include copy-protect;
+    }
+  }
+
+  .info{
+    position: absolute;
+    top: 9px;
+    left: 7px;
+    z-index: 5;
+    width: 96%;
+    font-size: 12px;
+    display: inline-flex;
+    height: 26px;
+    justify-content: space-between;
+    .lt{
+      display: flex;
+      .areaName {
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 0 4px;
+        line-height: 26px;
+        //white-space: pre-wrap;
+        border-radius: 3px;
+        white-space: nowrap;
+      }
+      .category{
+        background-color: #B6C2A6;
+        padding: 0 6px;
+        line-height: 26px;
+        margin-left: 7px;
+        // border: 1px solid $color-gld04;
+        border-radius: 3px;
+        color: rgba(0,0,0,.87);;
+        white-space: nowrap;
+        max-width: 34vw;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        opacity: 0.9;
+      }
+    }
+    .rt{
+      .view{
+        display: flex;
+        flex-direction: column;
+        background-color: #2c2c2ca8;
+        padding: 0 4px;
+        border-radius: 3px;
+        color: #fff;
+        height: 26px;
+        justify-content: center;
+        align-items: center;
+        list-style: 1;
+        span{
+          font-size: 11px;
+        }
+      }
+    }
+  }
+
 }
 
 .thumbmain {
   display: inline-flex !important;
+  padding: 0 16px;
+  width: 100%;
 
   > img {
     width: 100%;
-    height: 66.6vw;
+    height: 60vw;
     object-fit: cover;
     @include copy-protect;
   }
@@ -389,19 +427,23 @@ p{
     position: relative;
     .spot-info
     {
-      margin: auto;
-      width: 90%;
+      // margin: auto;
+      // width: 90%;
       background-color: #fff;
       border-radius: 10px;
       left: 0;
       right: 0;
-      padding-top: 10px;
+      padding-top: 0;
       padding-bottom: 10px;
-      margin-top: -21px;
+      // margin-top: -21px;
+      margin: -21px 8px 0;
 
       .title{
         border-bottom: 1px solid #bfa060;
         height: auto;
+        font-weight: 700;
+        padding: 4px 0;
+        color: #555;
       }
     }
   }
@@ -542,48 +584,6 @@ p{
     }
   }
 
-  // ::ng-deep .morning {
-  //   padding-right: 3px;
-  //   padding-left: 2px;
-
-  //   &::before {
-  //     display: inline-block;
-  //     content: url("../../../assets/img/budget.svg");
-  //     width: 16px;
-  //     height: 16px;
-  //     padding-right: 3px;
-  //     vertical-align: sub;
-  //   }
-  // }
-
-  // ::ng-deep .lunch {
-  //   padding-right: 3px;
-  //   padding-left: 2px;
-
-  //   &::before {
-  //     display: inline-block;
-  //     content: url("../../../assets/img/budget.svg");
-  //     width: 16px;
-  //     height: 16px;
-  //     padding-right: 3px;
-  //     vertical-align: sub;
-  //   }
-  // }
-
-  // ::ng-deep .dinner {
-  //   padding-right: 3px;
-  //   padding-left: 2px;
-
-  //   &::before {
-  //     display: inline-block;
-  //     content: url("../../../assets/img/budget.svg");
-  //     width: 16px;
-  //     height: 16px;
-  //     padding-right: 3px;
-  //     vertical-align: sub;
-  //   }
-  // }
-
   .businesshour{
     padding-right: 3px;
     padding-left: 2px;
@@ -607,10 +607,31 @@ p{
 
 #content {
   background-color: #f6f6f6;
-  padding-top: 12px;
+  padding-top: 20px;
   .mat-card-content {
+    .avatar{
+      margin-bottom: 4px;
+      img{
+        width: 38px;
+        height: 38px;
+        object-fit: cover;
+        border-radius: 50%;
+        margin-right: 4px;
+      }
+      &::after{
+        display: inline-block;
+        content: url("../../../assets/img/icon_point.svg");
+        width: 47px;
+        height: 17px;
+      }
+    }
     p{
       color: initial;
+      line-height: 1.57;
+      text-align: justify;
+      text-justify: inter-ideograph;
+      font-size: 14px;
+      color: #4d4d4d;
     }
   }
 }
@@ -909,6 +930,139 @@ button.inner {
           font-size: 13px;
         }
       }
+    }
+  }
+  // dummy after change app-userprofile-panel
+  .mat-card-content{
+    margin-top: 16px;
+    margin-bottom: 8px;
+    .card-box{
+      .card-header{
+        height: 159px;
+        position: relative;
+        &.detail{
+          height: 96px;
+        }
+        .cover{
+          background-color: #717171;
+          height: 120px;
+          border-radius: 7px;
+          .wrap{
+            display: flex;
+            justify-content: center;
+  
+            img{
+              height: 120px;
+              width: 100%;
+              object-fit: cover;
+            }
+  
+            span{
+              font-size: 13px;
+              margin-top: 31px;
+            }
+          }
+        }
+        .user{
+          .wrap{
+            background-color: #bdbab8;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            border: 2px sok;
+            border: 2px solid #fff;
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: auto;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 13px;
+            img{
+              width: 80px;
+              height: 80px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+          }
+        }
+      }
+
+      position: relative;
+      .card-info{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin: 10px 0;
+  
+        .username{
+          font-size: 15px;
+          font-weight: 700;
+        }
+  
+        .gender{
+          font-size: 11px;
+          line-height: 30px;
+          span{
+            width: 75px;
+            display: inline-block;
+            &.country{
+              &::before{
+                content: url("../../../assets/img/icon_place.svg");
+                width: 8px;
+                height: 10px;
+                display: inline-block;
+                vertical-align: -1px;
+                margin-right: 4px;
+              }
+            }
+          }          
+        }
+  
+        .about{
+          font-size: 14px;
+          background-color: #F7F5EC;
+          border-radius: 10px;
+          p{
+            white-space: pre-wrap;
+            padding: 14px 8px;
+            margin-block-end: 0;
+          }
+        }
+  
+        .bottom{
+          text-align: right;
+          margin: 14px 0;
+          button{
+            box-shadow: none;
+            width: 134px;
+            height: 28px;
+            border: 1px solid #bfa060;
+            border-radius: 14px;
+            padding: 0;
+            line-height: 26px;
+            font-size: 13px;
+            color: #bfa060;
+          }
+        }
+      }
+    }
+  }
+
+  .buttons{
+    position: relative;
+    display: inline-block;
+    button{
+      all: unset;
+      width: 188px;
+      height: 26px;
+      border: 1px solid #F3787F;
+      border-radius: 13px;
+      color: #F3787F;
+      font-size: 14px;
+      text-align: center;
     }
   }
 }
