--- a/src/app/parts/userprofile-panel/userprofile-panel.component.scss
+++ b/src/app/parts/userprofile-panel/userprofile-panel.component.scss
@@ -84,7 +84,7 @@
       display: flex;
       flex-direction: column;
       text-align: center;
-      margin: 10px 8px;
+      // margin: 10px 8px;
 
       .username{
         font-size: 15px;
