--- a/src/app/parts/review-list-panel/review-list-panel.component.scss
+++ b/src/app/parts/review-list-panel/review-list-panel.component.scss
@@ -8,6 +8,10 @@
     // }
     display: flex;
 
+    .mat-divider{
+      
+    }
+
     button.edit{
       margin-top: 5px;
       line-height: 25px;
