--- a/src/app/parts/userprofile-panel/userprofile-panel.component.html
+++ b/src/app/parts/userprofile-panel/userprofile-panel.component.html
@@ -1,51 +1,44 @@
-<!-- <mat-card> -->
-  <!-- <mat-card-header *ngIf="detail">
-    <h4>
-      {{ "PostersProfile" | translate }}
-    </h4>
-  </mat-card-header> -->
-  <mat-card-content *ngIf="user">
-    <div class="card-box">
-      <div class="card-header">
-        <div class="cover">
-          <div class="wrap">
-            <!-- <img
-              *ngIf="user.coverImageCropped || user.coverPreviewUrl || user.coverUrl"
-              [src]="user.coverImageCropped ?? user.coverPreviewUrl ?? user.coverUrl"
-              alt=""
-            /-->
-          </div>
-        </div>
-        <div class="user">
-          <div class="wrap">
-            <img
-              *ngIf="user.imageCropped || user.picturePreviewUrl || user.pictureUrl"
-              [src]="user.imageCropped ?? user.picturePreviewUrl ?? user.pictureUrl"
-              alt=""
-            />
-          </div>
+<ng-container *ngIf="user">
+  <div class="card-box">
+    <div class="card-header">
+      <div class="cover">
+        <div class="wrap">
+          <img
+            *ngIf="user.coverImageCropped || user.coverPreviewUrl || user.coverUrl"
+            [src]="user.coverImageCropped ?? user.coverPreviewUrl ?? user.coverUrl"
+            alt=""
+          />
         </div>
       </div>
-      <div class="card-info">
-        <div class="username">
-          {{ user.displayName }}
-        </div>
-        <div class="gender">
-          <span *ngIf="user.countryName" class="country">{{ user.countryName }}</span>
-          <span *ngIf="user.age">/{{ user.age }}{{ "Age" | translate }}</span>
-          <span *ngIf="user.gender==='femail'">/{{ "Female" | translate }}</span>
-          <span *ngIf="user.gender==='male'">/{{ "Male" | translate }}</span>
-
-        </div>
-        <div class="about">
-          <p>{{ user.aboutMe }}</p>
-        </div>
-        <div *ngIf="edit" class="bottom">
-          <button mat-raised-button (click)="onClickEdit()">
-            {{ "EditUserProfile" | translate }}
-          </button>
+      <div class="user">
+        <div class="wrap">
+          <img
+            *ngIf="user.imageCropped || user.picturePreviewUrl || user.pictureUrl"
+            [src]="user.imageCropped ?? user.picturePreviewUrl ?? user.pictureUrl"
+            alt=""
+          />
         </div>
       </div>
     </div>
-  </mat-card-content>
-<!-- </mat-card> -->
+    <div class="card-info">
+      <div class="username">
+        {{ user.displayName }}
+      </div>
+      <div class="gender">
+        <span *ngIf="user.countryName" class="country">{{ user.countryName }}</span>
+        <span *ngIf="user.age">/{{ user.age }}{{ "Age" | translate }}</span>
+        <span *ngIf="user.gender==='femail'">/{{ "Female" | translate }}</span>
+        <span *ngIf="user.gender==='male'">/{{ "Male" | translate }}</span>
+
+      </div>
+      <div class="about">
+        <p>{{ user.aboutMe }}</p>
+      </div>
+      <div *ngIf="edit" class="bottom">
+        <button mat-raised-button (click)="onClickEdit()">
+          {{ "EditUserProfile" | translate }}
+        </button>
+      </div>
+    </div>
+  </div>
+</ng-container>
