--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -4,14 +4,14 @@ infinite-scroll
 [infiniteScrollUpDistance]="1.5"
 [infiniteScrollThrottle]="150"
 (scrolled)="scrolledEmit()">
-  <mat-card id="nolist" *ngIf="!isList && (condition.select==='spot' || condition.select==='all')">
+  <!-- <mat-card id="nolist" *ngIf="!isList && (condition.select==='spot' || condition.select==='all')">
     <mat-card-content>
       みんなのおすすめは、見つかりませんでした。<br>
       代わりにGoogleにてヒットしたスポットを表示します。<br>
       （これらのスポットもプランに入れることができます。）
     </mat-card-content>
-  </mat-card>
-  <mat-card id="nolist" *ngIf="!isList && condition.select==='plan'">
+  </mat-card> -->
+  <mat-card id="nolist" *ngIf="!isList && condition.select!=='google'">
     <mat-card-content>
       みんなのおすすめは、見つかりませんでした。<br>
       代わりにGoogle検索でスポットを検索できます。<br>
