--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -61,6 +61,7 @@
         </ng-container>
       </ng-template>
     </mat-card-content>
+    
     <div class='info'>
       <div class='lt'>
         <span class="areaName" *ngIf="data.areaName1">
@@ -84,6 +85,7 @@
         <mat-list-item class="title">
           {{ "BasicInfomation" | translate }}
         </mat-list-item>
+        <span class='divider'></span>
         <!-- <mat-list-item
           class="row view">
           <span>
