--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -4,11 +4,9 @@
       <div class='header'>
         <div class="lt">
           <span class='avatar'>
-            <img
-                [src]="data.user?.pictureUrl"
-                [alt]="data.user?.displayName"
-              />
-            <span class="username">{{data.user?.displayName}}</span>
+            <img [src]='data.user?.pictureUrl || data.userStaff?.pictureUrl || blankUserSrc' alt=''>
+            <span class="username">
+              {{data.user?.displayName ? data.user?.displayName : data.userStaff?.romanLetterName | langFilter:lang}}</span>
           </span>
         </div>
         <div class="rt">
@@ -62,6 +60,23 @@
         </ng-container>
       </ng-template>
     </mat-card-content>
+
+    <div class='info' *ngIf="data.pictures">
+      <div class='lt'>
+        <span class="areaName" *ngIf="data.areaName">
+          {{ data.areaName | langFilter: lang }}
+        </span>
+        <!-- <span class="category" *ngIf="data.areaName2">
+          {{ data.areaName2 | langFilter: lang }}
+        </span> -->
+      </div>
+      <div class='rt'>
+        <div class="view">
+          <!-- {{ data.pvQty }}<span>view</span> -->
+          0 <span>View</span>
+        </div>
+      </div>
+    </div>
   </mat-card>
 
   <!-- 基本情報 -->
@@ -80,6 +95,7 @@
             <button mat-menu-item (click)="onClickReport()">{{ "ReportPlanUser" | translate }}</button>
           </mat-menu>
         </mat-list-item>
+        <span class='divider'></span>
         <mat-list-item class="row psname">
           <span *ngFor="let item of spots; index as i">{{item.spotName}}</span>
         </mat-list-item>
@@ -110,7 +126,7 @@
   <mat-card id="planExplanation" *ngIf="data.planExplanation">
     <mat-card-content>
       <div class='avatar'>
-        <img [src]="data.user?.pictureUrl" [alt]="data.user?.displayName"/>
+        <img [src]='data.user?.pictureUrl || data.userStaff?.pictureUrl || blankUserSrc' alt=''>
       </div>
       <p [innerHTML]="data.planExplanation | replaceNewline"></p>
     </mat-card-content>
@@ -267,77 +283,56 @@
   <!-- レビュー投稿 -->
   <app-review-list-panel *ngIf="reviewResult" [reviewResult]="reviewResult" [type]="$isRemojuPlan ? 2 : 3" [id]="data.planId" [spotplanName]="data.planName"></app-review-list-panel>
 
-  <!-- スタッフ -->
-  <mat-card id="writer" *ngIf="$userStaff">
-    <mat-card-header>
-      <h4 class="header">
-        {{ "Article" | translate }}
-      </h4>
-    </mat-card-header>
-    <mat-divider class="rj-linecolor"></mat-divider>
-    <mat-card-content class="mt16">
-      <mat-list>
-        <mat-list-item style="height: auto;">
-          <dl class="profile">
-            <dt>
+  <!-- 投稿者のプロフィール-->
+  <mat-card id="writer" *ngIf="data.user || data.userStaff">
+    
+    <h4>{{"PostersProfile"|translate}}</h4>
+    
+    <ng-container *ngIf="$userStaff;else profile" >
+      <div class='card-box'>
+        <div class="card-header">
+          <div class="cover">
+            <div class="wrap">
+              
+            </div>
+          </div>
+          <div class="user">
+            <div class="wrap">
               <img
                 src="{{ $userStaff.pictureUrl }}"
                 alt="{{ $userStaff.romanLetterName | langFilter: lang }}"
               />
-            </dt>
-            <dd>
-              {{ $userStaff.romanLetterName | langFilter: lang }}<br /><span class="division">{{
-                $userStaff.departmentName | langFilter: lang
-              }}</span>
-            </dd>
-          </dl>
-        </mat-list-item>
-        <mat-list-item class="intro" style="height: auto;">
-          <p>
-            {{ $userStaff?.introduction | langFilter: lang }}
-          </p>
-        </mat-list-item>
-      </mat-list>
-    </mat-card-content>
+            </div>
+          </div>
+        </div>
+        <div class="card-info">
+          <div class="username">
+            {{ $userStaff.romanLetterName | langFilter: lang }}
+          </div>
+          <div class="attribute">
+            <span class="division">{{
+              $userStaff.departmentName | langFilter: lang
+            }}</span>
+          </div>
+          <div class="about">
+            <p>{{ $userStaff?.introduction | langFilter: lang }}</p>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+    
+    <ng-template #profile>
+      <app-userprofile-panel *ngIf="data.user && data.country" [otherUser]="data.user" [country]="data.country" [detail]="true" [memo]="data.memo"></app-userprofile-panel>
+      <div class='buttons'>
+        <button mat-button disableRipple matBadge="4" matBadgeSize="small" >この投稿者の投稿一覧へ</button>
+      </div>
+    </ng-template>
   </mat-card>
-
-  <!-- プラン投稿用メモ -->
-  <!-- <mat-card id="Memo" *ngIf="data.memo">
-    <mat-card-content>
-      <p [innerHTML]="data.memo | replaceNewline"></p>
-    </mat-card-content>
-  </mat-card> -->
-
-  <!-- 投稿者のプロフィール -->
-  <mat-card id="profile">
-    <mat-card-content>
-      <h4>{{"PostersProfile"|translate}}</h4>
-      
-    </mat-card-content>
-    <app-userprofile-panel *ngIf="data.user && data.country" [otherUser]="data.user" [country]="data.country" [detail]="true" [memo]="data.memo"></app-userprofile-panel>
-    <div class='buttons'>
-      <button mat-button disableRipple matBadge="4" matBadgeSize="small" >この投稿者の投稿一覧へ</button>
-    </div>
-  </mat-card>
-  
-
-  <!-- このプランを共有する
-  <mat-card id="snslink">
-    <mat-card-content>
-      <label>{{ "ShareThisPlan" | translate }}</label>
-      <button mat-mini-fab class="fb"></button>&nbsp;
-      <button mat-mini-fab class="tw"></button>&nbsp;
-      <button mat-mini-fab class="line"></button>
-    </mat-card-content>
-  </mat-card> -->
 
   <mat-card id="otherSpot" class="pics" *ngIf="data.spotToGoList?.length > 0">
-    <mat-card-header>
-      <h4 class="header">
-        {{ "RecommendedSpotsInTheSameArea" | translate }}
-      </h4>
-    </mat-card-header>
-    <mat-divider class="rj-linecolor"></mat-divider>
+    <h4 class="header">
+      {{ "RecommendedSpotsInTheSameArea" | translate }}
+    </h4>
     <mat-card-content class="mt16">
       <owl-carousel-o [options]="customOptions">
         <ng-container *ngFor="let item of data.spotToGoList; index as i">
@@ -357,12 +352,9 @@
   </mat-card>
 
   <mat-card id="specialpage" class="pics" *ngIf="features?.length > 0">
-    <mat-card-header>
-      <h4 class="header">
-        {{ "FeaturedLink" | translate }}
-      </h4>
-    </mat-card-header>
-    <mat-divider class="rj-linecolor"></mat-divider>
+    <h4 class="header">
+      {{ "FeaturedLink" | translate }}
+    </h4>
     <mat-card-content class="mt16">
       <owl-carousel-o [options]="specialPageOptions">
         <ng-container *ngFor="let item of features; index as i">
