--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -21,6 +21,10 @@ p{
 #spotdtlheader {
   padding: 0;
 
+  position: sticky;
+  top: 0;
+  z-index: 11;
+
   .header{
     margin: 0 16px 4px;
     display: flex;
@@ -37,6 +41,7 @@ p{
           height: 38px;
           object-fit: cover;
           border-radius: 50%;
+          margin-top: 4px;
         }
         .username{
           font-size: 11px;
@@ -439,11 +444,18 @@ p{
       margin: -21px 8px 0;
 
       .title{
-        border-bottom: 1px solid #bfa060;
+        // border-bottom: 1px solid #bfa060;
         height: auto;
         font-weight: 700;
         padding: 4px 0;
         color: #555;
+      }
+
+      span.divider{
+        border-bottom: 1px solid #bfa060;
+        display: block;
+        margin-right: 8px;
+        margin-left: 8px;
       }
     }
   }
