--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -1,6 +1,6 @@
 <div class="box"
 infinite-scroll
-[infiniteScrollDistance]="5"
+[infiniteScrollDistance]="isList ? 5 : 2"
 [infiniteScrollUpDistance]="1.5"
 [infiniteScrollThrottle]="150"
 (scrolled)="scrolledEmit()">
