--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -23,11 +23,11 @@ div.plandtl{
   }
   
   #plandtlheader {
-    padding: 0;
-  
+    padding: 0;  
     position: sticky;
     top: 0;
     z-index: 11;
+    border-radius: 0;
   
     .header{
       width: 100%;
