--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -48,8 +48,11 @@
       </div>
     </div>
     <div class='row result' [ngClass]="{'on':this.chkTarms()}">
-      <button mat-button class="popupItem spot-result" (click)="openDialog(0)">
-        <span>{{searchTarms?.area}} {{searchTarms?.cate}}</span>
+      <button class='popupItem are' (click)="openDialog(0)">
+        <span>{{searchTarms?.area}}</span>
+      </button>
+      <button class='popupItem cat' (click)="openDialog(1)">
+        <span>{{searchTarms?.cate}}</span>
       </button>
       <button class="popupItem reset" (click)="condReset()">
         <img src="../../../../../assets/img/pop_reset.svg" alt="">
